--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://ge2338.github.io/website",
+  "homepage": "https://kfleung129.github.io/gademic/",
   "name": "gademic",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +15,8 @@
     "framer-motion": "^6.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "react-router-dom": "^6.2.1"
   }
 }
